[package]
name = "file_module"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
caravel_core = { version = "0.1.0", path = "../caravel/caravel_core" }
caravel_macro = { version = "0.1.2", path = "../caravel/caravel_macro" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
